--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <p>paragraf pierwszy</p>
      <p>paragraf drugi</p>
     <p>paragfar trzeci</p>
-   
+   <p>parafraf czwarty</p>
 
 </body>
 </html>
